--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+
+.Images {
+  height: 50;
+}
+
+.Title {
+  font-size: 2rem;
+}
+.Body {
+  padding: 16;
+}
+
+.Motobomba {
+  padding-left: 16;
+}
